--- a/index.html
+++ b/index.html
@@ -104,18 +104,20 @@
         <div class="second-section">
             <div class="movies">
                 <div class="movies-cont">
-                    <div class="movies-image">
-                        <img src="" alt="">
-                    </div>
-                    <div class="movies-info">
-                        <div class="movies-info-cont">
-                            <div class="movies-text">
-                                <h2></h2>
-                                <p></p>
-                            </div>
-                            <div class="movies-btns">
-                                <button class="movie-watch-btn">Watch</button>
-                                <button class="movie-add-btn">+</button>
+                    <div class="movie-slider">
+                        <div class="movies-image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="movies-info">
+                            <div class="movies-info-cont">
+                                <div class="movies-text">
+                                    <h2></h2>
+                                    <p></p>
+                                </div>
+                                <div class="movies-btns">
+                                    <button class="movie-watch-btn">Watch</button>
+                                    <button class="movie-add-btn">+</button>
+                                </div>
                             </div>
                         </div>
                     </div>
