--- a/movies.html
+++ b/movies.html
@@ -101,7 +101,7 @@
             <div class="section-main-cont">
                 <div class="movie-search-cont">
                     <h2>Please enter the movie name</h2>
-                    <input type="text" placeholder="Movie title" class="inputTag" >
+                    <input type="text" placeholder="The Adam Project" class="inputTag" >
                     <input type="submit" onclick="myFunction()" class="search-button">
                 </div>
                 <div class="movie-page-cont">
